# rustor

./: .gitignore  Cargo.toml  README.md
doc/: abstraction.md  flows.drawio  tree ops.drawio
librustor/: Cargo.toml
librustor/src/: lib.rs  object.rs  test.rs
librustor/src/blockstore/: blockdevice.rs  blockstore.rs  mod.rs
librustor/src/erasure/: mod.rs
librustor/src/freelist/: bitmap.rs  bitmapfreelist.rs  btree.rs  freelist.rs  freetree.rs  mod.rs  rcvecfreelist.rs  vecfreelist.rs
librustor/src/keygen/: mod.rs
librustor/src/keystore/: json_keystore.rs  keystore.rs  sqlite_keystore.rs
librustor/src/objstore/: filestore.rs  mod.rs  objstore.rs
librustor/src/placer/: placer.rs
rustorcli/: Cargo.toml
rustorcli/src/: cli.yml  main.rs
rustord/: Cargo.toml
src/: .main.rs.swp  .object.rs.swp  lib.rs  main.rs  object.rs  test.rs  util.rs
src/blockstore/: blockstore.rs  manifest.rs  mod.rs  raid.rs
src/freelist/: avl.rs  mod.rs  vecfreelist.rs
src/keystore/: json_keystore.rs  keystore.rs  mod.rs
src/objstore/: .filestore.rs.swp  .objstore.rs.swp  filestore.rs  objstore.rs
