[package]
name = "rustor"
version = "0.1.0"
authors = ["Danny Gale <danny.gale@gale-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version =  "0.8", features = ["v4"] }
rusqlite = "0.23.1"
serde_json = "1.0.56"
serde = { version =  "1.0", features = ["derive"]}
shrust = "0.0.7"
