[package]
name = "rustor"
version = "0.1.0"
authors = ["Danny Gale <danny.gale@gale-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "librustor",
    "rustorcli",
    "rustord",
]

[lib]
path = "librustor/src/lib.rs"

[[bin]]
name = "rustorcli"
path = "rustorcli/src/main.rs"


[dependencies]
uuid = { version =  "0.8", features = ["v4", "v5", "serde"] }
#rusqlite = "0.23.1"
serde_json = "1.0.56"
serde = { version =  "1.0", features = ["derive"]}
#actix-web = "2.0"
#actix-rt = "1.0"

proptest = "0.10.0"
log = "0.4"

librustor = { path = "librustor" }
clap = {version = "~2.27.0", features = ["yaml"]}
env_logger= "0.8.2"
