[package]
name = "rustorcli"
version = "0.1.0"
authors = ["Danny Gale <danny.gale@gale-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librustor = { path = "../librustor" }
uuid = "*"
clap = {version = "~2.27.0", features = ["yaml"]}
env_logger= "0.8.2"
log = "0.4"
